// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionList rendering empty section headers is fine 1`] = `
<RCTScrollView
  ItemSeparatorComponent={undefined}
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "key": "i1",
          },
          Object {
            "key": "i2",
          },
        ],
        "key": "s1",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onViewableItemsChanged={undefined}
  removeClippedSubviews={true}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "key": "i1",
          },
          Object {
            "key": "i2",
          },
        ],
        "key": "s1",
      },
    ]
  }
  stickyHeaderIndices={
    Array [
      0,
    ]
  }
  stickySectionHeadersEnabled={true}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
    />
    <View
      onLayout={[Function]}
    >
      <View>
        <item
          value="i1"
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <View>
        <item
          value="i2"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`SectionList renders all the bells and whistles 1`] = `
<RCTScrollView
  ItemSeparatorComponent={undefined}
  ListFooterComponent={[Function]}
  ListHeaderComponent={[Function]}
  SectionSeparatorComponent={[Function]}
  data={
    Array [
      Object {
        "ItemSeparatorComponent": [Function],
        "data": Array [
          Object {
            "id": "i1s1",
          },
          Object {
            "id": "i2s1",
          },
        ],
        "key": "1st Section",
        "keyExtractor": [Function],
        "renderItem": [Function],
      },
      Object {
        "data": Array [
          Object {
            "key": "i1s2",
          },
          Object {
            "key": "i2s2",
          },
        ],
        "key": "2nd Section",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onRefresh={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onViewableItemsChanged={undefined}
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  refreshing={false}
  removeClippedSubviews={true}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "ItemSeparatorComponent": [Function],
        "data": Array [
          Object {
            "id": "i1s1",
          },
          Object {
            "id": "i2s1",
          },
        ],
        "key": "1st Section",
        "keyExtractor": [Function],
        "renderItem": [Function],
      },
      Object {
        "data": Array [
          Object {
            "key": "i1s2",
          },
          Object {
            "key": "i2s2",
          },
        ],
        "key": "2nd Section",
      },
    ]
  }
  stickyHeaderIndices={
    Array [
      1,
      4,
    ]
  }
  stickySectionHeadersEnabled={true}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <RCTRefreshControl />
  <View>
    <View
      onLayout={[Function]}
    >
      <header />
    </View>
    <View
      onLayout={[Function]}
    >
      <sectionHeader
        value="1st Section"
      />
    </View>
    <View
      onLayout={[Function]}
    >
      <View>
        <itemForSection1
          value="i1s1"
        />
        <itemSeparatorForSection1 />
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <View>
        <itemForSection1
          value="i2s1"
        />
        <sectionSeparator />
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <sectionHeader
        value="2nd Section"
      />
    </View>
    <View
      onLayout={[Function]}
    >
      <View>
        <defaultItem
          value="i1s2"
        />
        <defaultItemSeparator />
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <View>
        <defaultItem
          value="i2s2"
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
    >
      <footer />
    </View>
  </View>
</RCTScrollView>
`;

exports[`SectionList renders empty list 1`] = `
<RCTScrollView
  ItemSeparatorComponent={undefined}
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onViewableItemsChanged={undefined}
  removeClippedSubviews={true}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
  sections={Array []}
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={true}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <View />
</RCTScrollView>
`;
